--- a/src/componentes/Main/style.module.css
+++ b/src/componentes/Main/style.module.css
@@ -4,5 +4,13 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 10px
+    justify-content: space-around;
+    align-items: flex-end;
+    gap: 10px;
+    width: min(850px, 100% - 10px);
+    margin-inline: auto;
+}
+
+.personaje {
+    width: 200px;
 }
